# freetype-opengl-experiments

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
assets/: asd.txt  daw.txt  test.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: callbacks.h  constants.h  face_collection.cc  face_collection.h  lru_freshness_cache.h  main.cc  main.cpp  renderer.cc  renderer.h  shader.h  shader.hpp  shaping_cache.h  state.cc  state.h  test.txt  texture.h  texture_atlas.cc  texture_atlas.h  util.cc  util.h  window.h
src/shaders/: fragmentShader.glsl  text.f.glsl  text.frag  text.v.glsl  text.vert  vertexShader.glsl
test/: all.cc
